Comments and function descriptions added

--- a/game_of_life.ipynb
+++ b/game_of_life.ipynb
@@ -6,7 +6,7 @@
       "name": "game_of_life.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvz3Q4Hbra7huTcF+sVeNw",
+      "authorship_tag": "ABX9TyMlGAa/Ec2IbgNiasEAUyf8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,10 @@
         "colab": {}
       },
       "source": [
+        "\"\"\"\n",
+        "This iphyton code is the simple implementation of \"game of life\" evolution simulator\n",
+        "By: Seifollahi\"\"\"\n",
+        "\n",
         "import random\n",
         "from IPython.display import clear_output, display\n",
         "import time\n",
@@ -41,6 +45,8 @@
         "from numpy import random\n",
         "\n",
         "\n",
+        "# initiation of the world with the size N\n",
+        "# old world and new world are the same size matrices\n",
         "N = 15\n",
         "w=int(N)\n",
         "h=int(N)\n",
@@ -58,7 +64,9 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "\"\"\"\n",
+        "generating of a random function to populate the worlds for the initial state\n",
+        "\"\"\"\n",
         "\n",
         "def rand(world, w, h):\n",
         "  random.seed(3)\n",
@@ -97,24 +105,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YOsS-dtKxV_I",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# old_world"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "GzpZiZc_lNbs",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "\"\"\"\n",
+        "This function draws the worlds\n",
+        "\"\"\"\n",
+        "\n",
         "def draw(world,w,h):\n",
         "    \n",
         "  for y in range(h):\n",
@@ -155,6 +154,10 @@
         "colab": {}
       },
       "source": [
+        "\"\"\"\n",
+        "Counting the neighbpors based on the rules\n",
+        "\"\"\"\n",
+        "\n",
         "def neighbour_count(world,i,j):\n",
         "  lives = 0\n",
         "  for y in [j-1,j,j+1]:\n",
@@ -176,7 +179,9 @@
         "\n",
         "  return lives\n",
         "\n",
-        "\n",
+        "\"\"\"\n",
+        "Evolving the worlds based on the rules\n",
+        "\"\"\"\n",
         "def evolution(world,w,h):\n",
         "\n",
         "  old_world = world.copy()\n",
@@ -208,7 +213,7 @@
       "metadata": {
         "id": "1dqWY6BgRG4p",
         "colab_type": "code",
-        "outputId": "a92b3275-d0c8-423c-d8df-ab4b9439b6ca",
+        "outputId": "237dfc19-5c83-4acf-db40-fd02799d801a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 741
@@ -226,40 +231,40 @@
         "\n",
         "  # if new_world = old_world\n"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "    █           █   █   █   █   █   █   █       █           \n",
+            "    █       █   █               █       █       █           \n",
             "\n",
-            "█                           █       █           █   █   █   \n",
+            "█   █           █   █       █   █               █           \n",
             "\n",
-            "                █   █                   █   █       █       \n",
+            "        █       █               █   █       █       █       \n",
             "\n",
-            "    █       █           █               █           █       \n",
+            "█       █       █   █       █       █       █       █   █   \n",
             "\n",
-            "█   █       █                                   █   █       \n",
+            "█       █       █           █       █                       \n",
             "\n",
-            "                    █                                       \n",
+            "        █       █   █       █       █                       \n",
             "\n",
-            "█   █   █   █   █   █   █   █       █   █   █   █           \n",
+            "    █   █       █           █                               \n",
             "\n",
-            "█                                       █           █       \n",
+            "                    █           █   █   █                   \n",
             "\n",
-            "█           █   █       █   █   █       █       █   █       \n",
+            "█   █       █       █       █           █               █   \n",
             "\n",
-            "█       █       █       █           █   █                   \n",
+            "    █       █       █       █   █       █               █   \n",
             "\n",
-            "█       █           █       █   █               █   █       \n",
+            "    █       █           █               █               █   \n",
             "\n",
-            "█       █   █   █           █           █   █       █       \n",
+            "    █       █   █           █       █   █               █   \n",
             "\n",
-            "█       █                           █   █   █       █       \n",
+            "    █                               █       █   █       █   \n",
             "\n",
-            "            █   █   █   █   █   █           █       █       \n",
+            "    █                               █       █       █   █   \n",
             "\n",
-            "█   █       █                           █       █       █   \n",
+            "    █                           █       █       █           \n",
             "\n"
           ],
           "name": "stdout"
@@ -271,7 +276,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-7efa55692cff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# print(new_world)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_world\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0;31m# if new_world = old_world\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-7efa55692cff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# print(new_world)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_world\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0;31m# if new_world = old_world\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
